--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div class="container">
     </div>
 
-    <script src="//code.jquery.com/jquery-1.11.2.js"></script>
+    <script src="/js/jquery-1.11.2.js"></script>
     <script src="app.js"></script>
   </body>
 
