add new project

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="React Flux Router Application">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="./bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="./bootstrap.min.css"> -->
     <link rel="stylesheet" href="./assets/styles.css">
   </head>
 
@@ -23,6 +23,7 @@
     </div>
 
     <script src="/js/jquery-1.11.2.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
     <script src="app.js"></script>
   </body>
 
