--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
     <meta name="description" content="React Flux Router Application">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <link rel="stylesheet" href="./bootstrap.min.css"> -->
-    <link rel="stylesheet" href="./assets/styles.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="assets/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="assets/styles.css">
   </head>
 
   <body>
@@ -22,8 +24,8 @@
     <div class="container">
     </div>
 
-    <script src="/js/jquery-1.11.2.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="js/jquery-1.11.2.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
     <script src="app.js"></script>
   </body>
 
