--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <script src="js/jquery-1.11.2.js"></script>
-    <script src="javascripts/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="app.js"></script>
   </body>
 
