style daily page

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>React Flux Router Boilerplate</title>
+    <title>Daily Scrum</title>
     <meta name="description" content="React Flux Router Application">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
